fix(GRaPPA): split member join and add new welcome messages table
